Adam changed views

--- a/application/MapsAgo/MapsAgo.WebUI/Views/Event/Index.cshtml
+++ b/application/MapsAgo/MapsAgo.WebUI/Views/Event/Index.cshtml
@@ -53,7 +53,7 @@
             @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ImageUrl)
+            <img src="@Html.DisplayFor(modelItem => item.ImageUrl)" alt="@Html.DisplayFor(modelItem => item.Name)-image" />
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Location.Name)
