--- a/application/MapsAgo/MapsAgo.WebUI/Views/Event/Details.cshtml
+++ b/application/MapsAgo/MapsAgo.WebUI/Views/Event/Details.cshtml
@@ -55,7 +55,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ImageUrl)
+            <img src="@Html.DisplayFor(model => model.ImageUrl)" alt="@Html.DisplayFor(model => model.Name)-image" />
         </dd>
 
         <dt>
