updates to users, admin and approved users

--- a/tests/LoginExample/LoginExample/Views/Account/Login.cshtml
+++ b/tests/LoginExample/LoginExample/Views/Account/Login.cshtml
@@ -6,6 +6,7 @@
 
 <h2>@ViewBag.Title.</h2>
 <div class="row">
+    @*log in section*@
     <div class="col-md-8">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -47,12 +48,18 @@
             }
         </section>
     </div>
+    @*Info section*@
     <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new { Action = "ExternalLogin", ReturnUrl = ViewBag.ReturnUrl })
-        </section>
+        <div class="alert alert-info">
+            <h4>Problems accessing a page?</h4>
+            <hr />
+            @*All registered users need to be awarded 'AuthorizedUser' status, before they gain full access rights *@
+            <p>If you have already registered, you may have to wait a 24hr grace period before being approved <b>Curator</b> status</p>
+        </div>
     </div>
 </div>
+
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
