Add user and role migrations
Attempting to edit roles for users, no longer able to see...

--- a/application/MapsAgo/MapsAgo.Web/Views/Shared/_Layout.cshtml
+++ b/application/MapsAgo/MapsAgo.Web/Views/Shared/_Layout.cshtml
@@ -21,18 +21,14 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     @using Microsoft.AspNet.Identity
                     @if (Request.IsAuthenticated)
                     {
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        <li>@Html.ActionLink("Events", "Index", "Event")</li>
-                    }
-                    else
-                    {
-                        //no link options are dislayed
-                    }            
+                        <li>@Html.ActionLink("Test", "Index", "Test")</li>
+                    }          
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
