--- a/application/MapsAgo/MapsAgo.Web/Views/Event/Index.cshtml
+++ b/application/MapsAgo/MapsAgo.Web/Views/Event/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table class="table table-bordered table-striped">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Location.Name)
@@ -22,9 +22,6 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Excerpt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Source)
@@ -57,9 +54,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Excerpt)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Source)
