--- a/application/MapsAgo/MapsAgo.Web/Views/Shared/_Layout.cshtml
+++ b/application/MapsAgo/MapsAgo.Web/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    @*@Styles.Render("~/Content/main")*@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -25,8 +26,12 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     @using Microsoft.AspNet.Identity
-                    @if (Request.IsAuthenticated)
+                    @if (User.IsInRole("Admin"))
                     {
+                        <li>@Html.ActionLink("Hi", "Index", "Hi")</li>
+                    }
+                    @if (Request.IsAuthenticated)
+{
                         <li>@Html.ActionLink("Test", "Index", "Test")</li>
                     }          
                 </ul>
