--- a/application/MapsAgo/MapsAgo.Web/Content/Site.css
+++ b/application/MapsAgo/MapsAgo.Web/Content/Site.css
@@ -1,4 +1,12 @@
-﻿body {
+﻿table.table-bordered {
+    border: 5px solid #7893AD;
+}
+.date input{
+    padding: 8px 2px 8px 4px;
+    font-size: 12px;
+}
+
+body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -13,9 +21,16 @@
 input,
 select,
 textarea {
-    max-width: 280px;
+    max-width: 100%;
 }
-
+form textarea {
+    min-height:6em;
+    width: 100%;
+}
+form select {
+    color: #222;
+    font-weight:400;
+}
 /* styles for validation helpers */
 .field-validation-error {
     color: #b94a48;
