--- a/application/MapsAgo/MapsAgo.Web/Views/Users/Index.cshtml
+++ b/application/MapsAgo/MapsAgo.Web/Views/Users/Index.cshtml
@@ -1,16 +1,14 @@
 ﻿@model IEnumerable<MapsAgo.Web.ViewModels.UserListViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Users";
 }
 
-<h2>Index</h2>
-
-@using (Html.BeginForm())
-{
+<h2>Users</h2>
 
 <table class="table">
     <tr>
+        <th></th>
         <th>
             @Html.DisplayNameFor(model => model.UserName)
         </th>
@@ -18,8 +16,12 @@
             @Html.DisplayNameFor(model => model.Email)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UserRoles)
+            @Html.DisplayNameFor(model => model.NumberOfEvents)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FlaggedEvents)
+        </th>
+        <th>Id</th>
         <th></th>
     </tr>
 
@@ -27,28 +29,37 @@
     {
         <tr>
             <td>
+            @if (item.Authorized) { 
+                <span class="glyphicon glyphicon-user"></span>
+            } else {
+                <span class="glyphicon glyphicon-user"
+                      style="color: lightgray"></span>
+            }
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.UserName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
-            @foreach (var ur in item.UserRoles) {
-                @Html.CheckBoxFor(x => ur.Checked)
-                @Html.LabelFor(x => ur.Name)
-            }
-            @*<td>
-                @Html.EditorFor(modelItem => item.UserRoles)
-            </td>*@
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                @Html.DisplayFor(x => item.NumberOfEvents)
+            </td>
+            <td>
+                @Html.DisplayFor(x => item.FlaggedEvents)
+            </td>
+            <td>
+                @Html.DisplayFor(x => item.Id)
+            </td>
+            <td>
+                @Html.ActionLink("Details", "Details", 
+                    //new { id = item.Id },
+                    new { UserName = item.UserName},
+                    new { @class = "btn btn-default btn-xs" }
+                )
             </td>
         </tr>
     }
 </table>
-    
-<input type="submit" value="Save" />
-}
 
-
+@*@(UIManager.Member == null ? "" : UIManager.Member.Email)*@
