--- a/application/MapsAgo/MapsAgo.Web/Views/Users/Index.cshtml
+++ b/application/MapsAgo/MapsAgo.Web/Views/Users/Index.cshtml
@@ -53,8 +53,7 @@
             </td>
             <td>
                 @Html.ActionLink("Details", "Details", 
-                    //new { id = item.Id },
-                    new { UserName = item.UserName},
+                    new { id = item.Id },
                     new { @class = "btn btn-default btn-xs" }
                 )
             </td>
