--- a/application/MapsAgo/MapsAgo.Web/Views/Event/Index.cshtml
+++ b/application/MapsAgo/MapsAgo.Web/Views/Event/Index.cshtml
@@ -11,26 +11,15 @@
 </p>
 <table class="table table-bordered table-striped">
     <tr>
+
         <th>
-            @Html.DisplayNameFor(model => model.Location.Name)
+            Event <!-- @Html.DisplayNameFor(model => model.Name) -->
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Type.Name)
+            Description @*@Html.DisplayNameFor(model => model.Excerpt)*@
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Excerpt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Source)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EndDate)
+            Location @*@Html.DisplayNameFor(model => model.Location.Name)*@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.DateCreated)
@@ -44,25 +33,41 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Location.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Type.Name)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Name)
+
+
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Type.Name)
+            </dt>
+            <dd>
+                @Html.DisplayFor(modelItem => item.Type.Name)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Source)
+            </dt>
+            <dd>
+                @Html.DisplayFor(modelItem => item.Source)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.StartDate)
+            </dt>
+            <dd>
+                @Html.DisplayFor(modelItem => item.StartDate)
+            </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.EndDate)
+            </dt>
+            <dd>
+                @Html.DisplayFor(modelItem => item.EndDate)
+            </dd>
         </td>
+ 
         <td>
             @Html.DisplayFor(modelItem => item.Excerpt)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Source)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StartDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EndDate)
+            @Html.DisplayFor(modelItem => item.Location.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.DateCreated)
@@ -71,9 +76,12 @@
             @Html.DisplayFor(modelItem => item.LastModified)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edit", "Edit", new { id = item.Id}, new { @class = "btn btn-xs btn-default" })
+            @Html.ActionLink("Details", "Details", new { id = item.Id}, new { @class = "btn btn-xs btn-default" })
+            @if (User.IsInRole("Admin"))
+            {
+            @Html.ActionLink("Delete", "Delete", new { id = item.Id}, new { @class = "btn btn-xs btn-danger" })
+            }
         </td>
     </tr>
 }
