--- a/application/MapsAgo/MapsAgo.Web/Views/Users/Details.cshtml
+++ b/application/MapsAgo/MapsAgo.Web/Views/Users/Details.cshtml
@@ -43,10 +43,10 @@
 <table class="table">
     <tr>
         <!-- TODO: better to have these dynamic -->
+        <th></th>
         <th>Name</th>
         <th>Excerpt</th>
-        <th>Date</th>
-        <th></th>
+        <th>Year</th>        
         <th></th>
     </tr>
     @Html.DisplayFor(model => model.UserEvents)
