--- a/application/MapsAgo/MapsAgo.Web/Views/Shared/_LoginPartial.cshtml
+++ b/application/MapsAgo/MapsAgo.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
+@using MapsAgo.Common
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -6,8 +7,14 @@
     @Html.AntiForgeryToken()
 
     <ul class="nav navbar-nav navbar-right">
+        <!-- only show for admin role -->
+        @if (User.IsInRole( RoleType.Admin.ToString()) ) {
+            <li>
+                @Html.ActionLink("Manage Users", "Index", "Users")
+            </li>
+        }
         <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink(User.Identity.GetUserName() + "'s Account", "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
