--- a/application/MapsAgo/MapsAgo.Web/Views/Users/Index.cshtml
+++ b/application/MapsAgo/MapsAgo.Web/Views/Users/Index.cshtml
@@ -8,7 +8,7 @@
 
 <table class="table">
     <tr>
-        <th></th>
+        <th><span class="glyphicon glyphicon-lock"></span></th>
         <th>
             @Html.DisplayNameFor(model => model.UserName)
         </th>
@@ -21,7 +21,6 @@
         <th>
             @Html.DisplayNameFor(model => model.FlaggedEvents)
         </th>
-        <th>Id</th>
         <th></th>
     </tr>
 
@@ -39,7 +38,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.UserName)
             </td>
-            <td>
+            <td>                
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
@@ -47,9 +46,6 @@
             </td>
             <td>
                 @Html.DisplayFor(x => item.FlaggedEvents)
-            </td>
-            <td>
-                @Html.DisplayFor(x => item.Id)
             </td>
             <td>
                 @Html.ActionLink("Details", "Details", 
@@ -60,5 +56,3 @@
         </tr>
     }
 </table>
-
-@*@(UIManager.Member == null ? "" : UIManager.Member.Email)*@
